// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!doctype html>
<head>
  <style>a {}</style>
  <script>1  + 2</script>
</head>

=====================================output=====================================
<!DOCTYPE html>
<head>
  <style>
    a {
    }
  </style>
  <script>
    1 + 2;
  </script>
</head>

================================================================================
`;

exports[`test.html 2`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!doctype html>
<head>
  <style>a {}</style>
  <script>1  + 2</script>
</head>

=====================================output=====================================
<!DOCTYPE html>
<head>
  <style>
    a {}
  </style>
  <script>
    1  + 2
  </script>
</head>

================================================================================
`;
